--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 </head>
 <body>
     <h1>ALBERTI</h1>
-    <h2>Dignity, Convenience and Beauty</h2>
-    <div>
+    <div id="secondHeader">
+        <h2>Dignity, Convenience <br> and Beauty</h2>
+    </div>
+    <div id="chapter">
     <p>
         Being to treat of the Designs of Edifices, we shall collect and transcribe
         into this our Work, all the most curious and usesul Observations left us
@@ -46,6 +48,13 @@
         which we call Edifices, took their Rise, and the Progress of their Improvement:
         Which unless I am mistaken, may be resolved as follows.
     </p>
+    </div>
+    <div id="buttons">
+        <div class="floating-box">Floating box</div>
+        <div class="floating-box">Floating box</div>
+        <div class="floating-box">Floating box</div>
+        <div class="floating-box">Floating box</div>
+        <div class="floating-box">Floating box</div>
     </div>
     <footer>
     </footer>
