--- a/index.html
+++ b/index.html
@@ -8,10 +8,13 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 </head>
 <body>
-    <h1>ALBERTI</h1>
+    <div id="firstHeader">
+        <h1>ALBERTI</h1>
+    </div>
     <div id="secondHeader">
         <h2>Dignity, Convenience <br> and Beauty</h2>
     </div>
+    <div id="stretch"></div>
     <div id="chapter">
     <p>
         Being to treat of the Designs of Edifices, we shall collect and transcribe
