--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
             </a>
         </div>
     </div>
+    <div id="chapterHeader">
+        <h3>Chapter 1<h3>
+    </div>
     <div id="stretch"></div>
     <div id="chapter">
     <p>
