--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <div id="headers">
-        <a href="chapter1.html"><h1>ALBERTI</h1></a>
-        <a href="chapter1.html"><h2>Dignity, Convenience and Beauty</h2></a>
+        <a href="1-1.html"><h1>ALBERTI</h1></a>
+        <a href="1-1.html"><h2>Dignity, Convenience and Beauty</h2></a>
     </div>
 </body>
 </html>
