--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="styles.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="script.js"></script>
 </head>
 <body>
     <div id="firstHeader">
@@ -19,6 +21,9 @@
         </a>
     </div>
     <div id="stretch"></div>
+    <div id="imageContainer">
+        <img src="resources/1.png" id="image" width="500">
+    </div>
     <div id="chapter">
     <p>
         Being to treat of the Designs of Edifices, we shall collect and transcribe
