--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <div id="imageContainer">
         <img src="resources/1.png" id="image" width="500">
     </div>
+    <h3>Designs of Edifices</h3>
     <div id="chapter">
     <p>
         Being to treat of the Designs of Edifices, we shall collect and transcribe
