--- a/1-1.html
+++ b/1-1.html
@@ -40,10 +40,12 @@
         </p>
     </div>
     <div id="buttons">
-        <a href="chapter1.html"><button class="button">Button</button></a>
-        <a href="chapter1.html"><button class="button">Button</button></a>
-        <a href="chapter1.html"><button class="button">Button</button></a>
-        <a href="chapter1.html"><button class="button">Button</button></a>
+        <a href="1-2.html"><button class="button">Of the first Occasion of erecting Edifices</button></a>
+        <a href="1-5.html"><button class="button">The Compartition</button></a>
+        <a href="1-6.html"><button class="button">The Columns and Walls</button></a>
+        <a href="1-7.html"><button class="button">The Apertures</button></a>
+        <a href="1-8.html"><button class="button">The Staircases</button></a>
+        <a href="1-7.html"><button class="button">The Apertures</button></a>
     </div>
     <footer>
     </footer>
