--- a/7-2.html
+++ b/7-2.html
@@ -31,10 +31,10 @@
         </p>
     </div>
     <div id="buttons">
-        <a href="chapter1.html"><button class="button">Button</button></a>
-        <a href="chapter1.html"><button class="button">Button</button></a>
-        <a href="chapter1.html"><button class="button">Button</button></a>
-        <a href="chapter1.html"><button class="button">Button</button></a>
+        <a href="1-3.html"><button class="button">Lines</button></a>
+        <a href="1-4.html"><button class="button">The Kinds of Platforms</button></a>
+        <a href="9-3.html"><button class="button">The Number</button></a>
+        <a href="1-7.html"><button class="button">The Apertures</button></a>
     </div>
     <footer>
     </footer>
