--- a/9-11.html
+++ b/9-11.html
@@ -46,10 +46,8 @@
         </p>
     </div>
     <div id="buttons">
-        <a href="chapter1.html"><button class="button">Button</button></a>
-        <a href="chapter1.html"><button class="button">Button</button></a>
-        <a href="chapter1.html"><button class="button">Button</button></a>
-        <a href="chapter1.html"><button class="button">Button</button></a>
+        <a href="9-10.html"><button class="button">What it is that an Architect ought principally to consider</button></a>
+        <a href="9-7.html"><button class="button">Errors: Confusion, Absurdity and Venture</button></a>
     </div>
     <footer>
     </footer>
