--- a/9-2.html
+++ b/9-2.html
@@ -31,10 +31,10 @@
     </p>
     </div>
     <div id="buttons">
-        <a href="chapter1.html"><button class="button">Button</button></a>
-        <a href="chapter1.html"><button class="button">Button</button></a>
-        <a href="chapter1.html"><button class="button">Button</button></a>
-        <a href="chapter1.html"><button class="button">Button</button></a>
+        <a href="1-1.html"><button class="button">Of Designs; their Value and Rules</button></a>
+        <a href="1-5.html"><button class="button">The Compartition</button></a>
+        <a href="9-3.html"><button class="button">The Number</button></a>
+        <a href="9-1.html"><button class="button">The Natural Beauty</button></a>
     </div>
     <footer>
     </footer>
