--- a/9-4.html
+++ b/9-4.html
@@ -26,17 +26,17 @@
     <h3>Analogy in all Operations</h3>
     <div id="chapter">
         <p>
-            We are now to treat of the Finishing. BY the Finishing I understand a certain mutual Correspondence of those several Lines, by which the Proportions are measured, whereof one is the Length, the other the Breadth, and the other the Height. THE Rule of these Proportions is best gathered from those Things in which we find Nature herself to be most compleat and admirable; and indeed I am every Day more and more convinced of the Truth of Pythagoras's Saying, that Nature is sure to act consistently, and with a constant <a href="index.html"><span class="sel">Analogy</span></a> in all her Operations: From whence I conclude, that the same Numbers, by means of which the Agreement of Sounds affects our Ears with Delight, are the very same which please our Eyes and our Mind. We shall therefore borrow all our Rules for the finishing our Proportions, from the Musicians, who are the greatest Masters of this Sort of Numbers, and from those particular Things wherein Nature shews herself most excellent and compleat: Not that I shall look any further into these Matters than is necessary for the Purpose of the Architect. We shall not therefore pretend to say anything of Modulation, or the particular Rules of any Instrument;
+            We are now to treat of the Finishing. BY the Finishing I understand a certain mutual Correspondence of those several Lines, by which the Proportions are measured, whereof one is the Length, the other the Breadth, and the other the Height. THE Rule of these Proportions is best gathered from those Things in which we find Nature herself to be most compleat and admirable; and indeed I am every Day more and more convinced of the Truth of Pythagoras's Saying, that Nature is sure to act consistently, and with a constant Analogy in all her Operations: From whence I conclude, that the same Numbers, by means of which the Agreement of Sounds affects our Ears with Delight, are the very same which please our Eyes and our Mind. We shall therefore borrow all our Rules for the finishing our Proportions, from the Musicians, who are the greatest Masters of this Sort of Numbers, and from those particular Things wherein Nature shews herself most excellent and compleat: Not that I shall look any further into these Matters than is necessary for the Purpose of the Architect. We shall not therefore pretend to say anything of Modulation, or the particular Rules of any Instrument;
 
         </p>
 
 
     </div>
     <div id="buttons">
-        <a href="chapter1.html"><button class="button">Button</button></a>
-        <a href="chapter1.html"><button class="button">Button</button></a>
-        <a href="chapter1.html"><button class="button">Button</button></a>
-        <a href="chapter1.html"><button class="button">Button</button></a>
+        <a href="9-1.html"><button class="button">The Natural Beauty</button></a>
+        <a href="9-2.html"><button class="button">Congruity</button></a>
+        <a href="9-3.html"><button class="button">The Number</button></a>
+        <a href="9-4.html"><button class="button">Square Numbers</button></a>
     </div>
     <footer>
     </footer>
