--- a/9-8.html
+++ b/9-8.html
@@ -32,10 +32,8 @@
 
     </div>
     <div id="buttons">
-        <a href="chapter1.html"><button class="button">Button</button></a>
-        <a href="chapter1.html"><button class="button">Button</button></a>
-        <a href="chapter1.html"><button class="button">Button</button></a>
-        <a href="chapter1.html"><button class="button">Button</button></a>
+        <a href="9-9.html"><button class="button">The Rules which give the Ornaments themselves their main Excellence</button></a>
+        <a href="9-7.html"><button class="button">Errors: Confusion, Absurdity and Venture</button></a>
     </div>
     <footer>
     </footer>
