--- a/9-9.html
+++ b/9-9.html
@@ -36,10 +36,8 @@
 
     </div>
     <div id="buttons">
-        <a href="chapter1.html"><button class="button">Button</button></a>
-        <a href="chapter1.html"><button class="button">Button</button></a>
-        <a href="chapter1.html"><button class="button">Button</button></a>
-        <a href="chapter1.html"><button class="button">Button</button></a>
+        <a href="9-8.html"><button class="button">Errors: want of ornament</button></a>
+        <a href="9-3.html"><button class="button">The Number</button></a>
     </div>
     <footer>
     </footer>
