--- a/1-2.html
+++ b/1-2.html
@@ -50,10 +50,8 @@
     </p>
     </div>
     <div id="buttons">
-        <a href="chapter1.html"><button class="button">Button</button></a>
-        <a href="chapter1.html"><button class="button">Button</button></a>
-        <a href="chapter1.html"><button class="button">Button</button></a>
-        <a href="chapter1.html"><button class="button">Button</button></a>
+        <a href="7-1.html"><button class="button">The Temples</button></a>
+        <a href="1-1.html"><button class="button">Of Designs; their Value and Rules</button></a>
     </div>
     <footer>
     </footer>
