--- a/1-3.html
+++ b/1-3.html
@@ -88,9 +88,9 @@
         </p>
     </div>
     <div id="buttons">
-        <a href="chapter1.html"><button class="button">Button</button></a>
-        <a href="chapter1.html"><button class="button">Button</button></a>
-        <a href="chapter1.html"><button class="button">Button</button></a>
+        <a href="1-4.html"><button class="button">The Kinds of Platforms</button></a>
+        <a href="7-2.html"><button class="button">The Round Figures</button></a>
+        <a href="9-3.html"><button class="button">The Number</button></a>
         <a href="chapter1.html"><button class="button">Button</button></a>
     </div>
     <footer>
