--- a/1-4.html
+++ b/1-4.html
@@ -47,10 +47,8 @@
     </p>
     </div>
     <div id="buttons">
-        <a href="chapter1.html"><button class="button">Button</button></a>
-        <a href="chapter1.html"><button class="button">Button</button></a>
-        <a href="chapter1.html"><button class="button">Button</button></a>
-        <a href="chapter1.html"><button class="button">Button</button></a>
+        <a href="7-2.html"><button class="button">The Round Figures</button></a>
+        <a href="1-4.html"><button class="button">Lines</button></a>
     </div>
     <footer>
     </footer>
