--- a/1-5.html
+++ b/1-5.html
@@ -55,10 +55,10 @@
         </p>
     </div>
     <div id="buttons">
-        <a href="chapter1.html"><button class="button">Button</button></a>
-        <a href="chapter1.html"><button class="button">Button</button></a>
-        <a href="chapter1.html"><button class="button">Button</button></a>
-        <a href="chapter1.html"><button class="button">Button</button></a>
+        <a href="1-4.html"><button class="button">The Kinds of Platforms</button></a>
+        <a href="1-6.html"><button class="button">The Columns and Walls</button></a>
+        <a href="7-4.html"><button class="button">Of the Apertures proper to Temples</button></a>
+        <a href="9-2.html"><button class="button">Congruity</button></a>
     </div>
     <footer>
     </footer>
