--- a/1-6.html
+++ b/1-6.html
@@ -35,10 +35,8 @@
     </p>
     </div>
     <div id="buttons">
-        <a href="chapter1.html"><button class="button">Button</button></a>
-        <a href="chapter1.html"><button class="button">Button</button></a>
-        <a href="chapter1.html"><button class="button">Button</button></a>
-        <a href="chapter1.html"><button class="button">Button</button></a>
+        <a href="9-3.html"><button class="button">The Number</button></a>
+        <a href="1-3.html"><button class="button">Lines</button></a>
     </div>
     <footer>
     </footer>
