--- a/1-7.html
+++ b/1-7.html
@@ -51,10 +51,8 @@
         </p>
     </div>
     <div id="buttons">
-        <a href="chapter1.html"><button class="button">Button</button></a>
-        <a href="chapter1.html"><button class="button">Button</button></a>
-        <a href="chapter1.html"><button class="button">Button</button></a>
-        <a href="chapter1.html"><button class="button">Button</button></a>
+        <a href="7-4.html"><button class="button">Of the Apertures proper to Temples</button></a>
+        <a href="9-3.html"><button class="button">The Number</button></a>
     </div>
     <footer>
     </footer>
