--- a/1-8.html
+++ b/1-8.html
@@ -35,10 +35,8 @@
     </p>
     </div>
     <div id="buttons">
-        <a href="chapter1.html"><button class="button">Button</button></a>
-        <a href="chapter1.html"><button class="button">Button</button></a>
-        <a href="chapter1.html"><button class="button">Button</button></a>
-        <a href="chapter1.html"><button class="button">Button</button></a>
+        <a href="1-1.html"><button class="button">Of Designs; their Value and Rules</button></a>
+        <a href="1-5.html"><button class="button">The Compartition</button></a>
     </div>
     <footer>
     </footer>
