--- a/7-1.html
+++ b/7-1.html
@@ -43,10 +43,10 @@
         </p>
     </div>
     <div id="buttons">
-        <a href="chapter1.html"><button class="button">Button</button></a>
-        <a href="chapter1.html"><button class="button">Button</button></a>
-        <a href="chapter1.html"><button class="button">Button</button></a>
-        <a href="chapter1.html"><button class="button">Button</button></a>
+        <a href="1-2.html"><button class="button">Of the first Occasion of erecting Edifices</button></a>
+        <a href="7-3.html"><button class="button">Delicacy in the Adorning the Temples</button></a>
+        <a href="7-4.html"><button class="button">Of the Apertures proper to Temples</button></a>
+        <a href="1-5.html"><button class="button">The Compartition</button></a>
     </div>
     <footer>
     </footer>
