--- a/7-3.html
+++ b/7-3.html
@@ -34,10 +34,10 @@
         </p>
     </div>
     <div id="buttons">
-        <a href="chapter1.html"><button class="button">Button</button></a>
-        <a href="chapter1.html"><button class="button">Button</button></a>
-        <a href="chapter1.html"><button class="button">Button</button></a>
-        <a href="chapter1.html"><button class="button">Button</button></a>
+        <a href="1-1.html"><button class="button">Of Designs; their Value and Rules</button></a>
+        <a href="1-2.html"><button class="button">Of the first Occasion of erecting Edifices</button></a>
+        <a href="1-7.html"><button class="button">The Apertures</button></a>
+        <a href="7-1.html"><button class="button">The Temples</button></a>
     </div>
     <footer>
     </footer>
