--- a/7-4.html
+++ b/7-4.html
@@ -31,10 +31,10 @@
         </p>
     </div>
     <div id="buttons">
-        <a href="chapter1.html"><button class="button">Button</button></a>
-        <a href="chapter1.html"><button class="button">Button</button></a>
-        <a href="chapter1.html"><button class="button">Button</button></a>
-        <a href="chapter1.html"><button class="button">Button</button></a>
+        <a href="1-7.html"><button class="button">The Apertures</button></a>
+        <a href="7-1.html"><button class="button">The Temples</button></a>
+        <a href="7-3.html"><button class="button">Delicacy in the Adorning the Temples</button></a>
+        <a href="1-3.html"><button class="button">Lines</button></a>
     </div>
     <footer>
     </footer>
