--- a/9-1.html
+++ b/9-1.html
@@ -43,10 +43,12 @@
         </p>
     </div>
     <div id="buttons">
-        <a href="chapter1.html"><button class="button">Button</button></a>
-        <a href="chapter1.html"><button class="button">Button</button></a>
-        <a href="chapter1.html"><button class="button">Button</button></a>
-        <a href="chapter1.html"><button class="button">Button</button></a>
+        <a href="9-7.html"><button class="button">Errors: Confusion, Absurdity and Venture</button></a>
+        <a href="9-9.html"><button class="button">The Rules which give the Ornaments themselves their main Excellence</button></a>
+        <a href="9-8.html"><button class="button">Errors: want of ornament</button></a>
+        <a href="9-2.html"><button class="button">Congruity</button></a>
+        <a href="1-1.html"><button class="button">Of Designs; their Value and Rules</button></a>
+        <a href="1-5.html"><button class="button">The Compartition</button></a>
     </div>
     <footer>
     </footer>
