--- a/9-10.html
+++ b/9-10.html
@@ -60,10 +60,8 @@
 
     </div>
     <div id="buttons">
-        <a href="chapter1.html"><button class="button">Button</button></a>
-        <a href="chapter1.html"><button class="button">Button</button></a>
-        <a href="chapter1.html"><button class="button">Button</button></a>
-        <a href="chapter1.html"><button class="button">Button</button></a>
+        <a href="9-1.html"><button class="button">The Natural Beauty</button></a>
+        <a href="9-11.html"><button class="button">To what Sort of Persons the Architect ought to offer his Service</button></a>
     </div>
     <footer>
     </footer>
