--- a/9-3.html
+++ b/9-3.html
@@ -37,10 +37,12 @@
 
     </div>
     <div id="buttons">
-        <a href="chapter1.html"><button class="button">Button</button></a>
-        <a href="chapter1.html"><button class="button">Button</button></a>
-        <a href="chapter1.html"><button class="button">Button</button></a>
-        <a href="chapter1.html"><button class="button">Button</button></a>
+        <a href="1-6.html"><button class="button">The Columns and Walls</button></a>
+        <a href="1-7.html"><button class="button">The Apertures</button></a>
+        <a href="7-4.html"><button class="button">Of the Apertures proper to Temples</button></a>
+        <a href="9-1.html"><button class="button">The Natural Beauty</button></a>
+        <a href="9-4.html"><button class="button">Analogy in all Operations</button></a>
+        <a href="9-5.html"><button class="button">Square Numbers</button></a>
     </div>
     <footer>
     </footer>
