--- a/9-5.html
+++ b/9-5.html
@@ -34,10 +34,8 @@
 
     </div>
     <div id="buttons">
-        <a href="chapter1.html"><button class="button">Button</button></a>
-        <a href="chapter1.html"><button class="button">Button</button></a>
-        <a href="chapter1.html"><button class="button">Button</button></a>
-        <a href="chapter1.html"><button class="button">Button</button></a>
+        <a href="9-3.html"><button class="button">The Number</button></a>
+        <a href="9-6.html"><button class="button">Means</button></a>
     </div>
     <footer>
     </footer>
