--- a/9-6.html
+++ b/9-6.html
@@ -39,10 +39,12 @@
 
     </div>
     <div id="buttons">
-        <a href="chapter1.html"><button class="button">Button</button></a>
-        <a href="chapter1.html"><button class="button">Button</button></a>
-        <a href="chapter1.html"><button class="button">Button</button></a>
-        <a href="chapter1.html"><button class="button">Button</button></a>
+        <a href="1-3.html"><button class="button">Lines</button></a>
+        <a href="1-5.html"><button class="button">The Compartition</button></a>
+        <a href="1-6.html"><button class="button">The Columns and Walls</button></a>
+        <a href="9-3.html"><button class="button">The Number</button></a>
+        <a href="9-5.html"><button class="button">Square Numbers</button></a>
+        <a href="9-2.html"><button class="button">Congruity</button></a>
     </div>
     <footer>
     </footer>
