--- a/9-7.html
+++ b/9-7.html
@@ -33,10 +33,8 @@
 
     </div>
     <div id="buttons">
-        <a href="chapter1.html"><button class="button">Button</button></a>
-        <a href="chapter1.html"><button class="button">Button</button></a>
-        <a href="chapter1.html"><button class="button">Button</button></a>
-        <a href="chapter1.html"><button class="button">Button</button></a>
+        <a href="9-4.html"><button class="button">Analogy in all Operations</button></a>
+        <a href="9-1.html"><button class="button">The Natural Beauty</button></a>
     </div>
     <footer>
     </footer>
