--- a/index.html
+++ b/index.html
@@ -62,10 +62,7 @@
     </p>
     </div>
     <div id="buttons">
-        <a href="chapter1.html"><button class="button">Button</button></a>
-        <a href="chapter1.html"><button class="button">Button</button></a>
-        <a href="chapter1.html"><button class="button">Button</button></a>
-        <a href="chapter1.html"><button class="button">Button</button></a>
+        <a href="9-10.html"><button class="button">Index</button></a>
     </div>
     <footer>
     </footer>
